--- a/styles/show.css
+++ b/styles/show.css
@@ -30,20 +30,20 @@
 }
 
 .red-page {
-  top: -5px;
+  top: -23px;
   left: 0px;
   background-color: #CD5C5C;
 }
 
 .blue-page {
-  top: -5px;
+  top: -23px;
   left: 0px;
   background-color: #42A5F5;
 }
 
 .master-page {
   top: -23px;
-  left: 0px;
+  right: 0px;
   background-color: #CE93D8;
   text-transform: uppercase;
 }
@@ -69,4 +69,88 @@
 
 .indent-block-video {
   margin-left: 45px;
+}
+
+.type-cell-page {
+  position: relative;
+}
+
+.type-label-page {
+  position: absolute;
+  font-size: 11px;
+  padding: 1px 6px;
+  font-weight: bold;
+  border-radius: 6px;
+  color: #000;
+  white-space: nowrap;
+}
+
+.audio-label-page {
+  top: -5px;
+  left: 0px;
+  background-color: #4CAF50;
+  text-transform: uppercase;
+}
+
+.misc-label-page {
+  top: -5px;
+  left: 0px;
+  background-color: #4CAF50;
+  text-transform: uppercase;
+}
+
+.note-block {
+  position: absolute;
+  top: -6px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #f6f8fa;
+  border: 1px solid #d0d7de;
+  padding: 2px 6px;
+  font-size: 11px;
+  line-height: 1.1;
+  border-radius: 6px;
+  max-width: calc(100% - 150px);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.note-block.expanded {
+  white-space: normal;
+  text-align: left;
+  box-shadow: 0 0 4px rgba(0,0,0,0.1);
+  max-width: calc(100% - 150px);
+  width: 100%;
+}
+
+.credits-block {
+  position: absolute;
+  top: -25px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #f6f8fa;
+  border: 1px solid #d0d7de;
+  padding: 2px 6px;
+  font-size: 11px;
+  line-height: 1.1;
+  border-radius: 6px;
+  max-width: calc(100% - 150px);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.credits-block.expanded {
+  white-space: normal;
+  text-align: left;
+  box-shadow: 0 0 4px rgba(0,0,0,0.1);
+  max-width: calc(100% - 150px);
+  width: 100%;
 }
