--- a/src/shows/index.njk
+++ b/src/shows/index.njk
@@ -106,22 +106,25 @@
                <span class="type-label audio-label">audio</span>
                {% elif "misc" in show.category %}
                <span class="type-label misc-label">misc</span>
+               {% elif "video" in show.category %}
+               <span class="type-label video-label">video</span>
                {% endif %}
                {% else %}
                —
                {% endif %}
             </td>
-            <td>
-               <div class="source-wrapper">
-                  {{ show.source or "—" }}
-                  {% if show.fileSlug and show.fileSlug.includes('show_1') %}
-                  <span class="show-label label-show1">Show 1</span>
-                  {% elif show.fileSlug and show.fileSlug.includes('show_2') %}
-                  <span class="show-label label-show2">Show 2</span>
-                  {% endif %}
-               </div>
+            <td class="type-cell">
+               {{ show.source or "—" }}
+               {% if show.fileSlug and 'show_1' in show.fileSlug %}
+                 <span class="show-label">Show 1</span>
+               {% elif show.fileSlug and 'show_2' in show.fileSlug %}
+                 <span class="show-label">Show 2</span>
+               {% endif %}
+               {% if show.master == true or (show.tapers and show.tapers.length == 1 and show.tapers[0] == "Vortex") %}
+               <span class="trade-label master">MASTER</span>
+               {% endif %}
             </td>
-            <td style="position: relative;">
+            <td class="type-cell">
                {% if show.tapers %}
                {{ show.tapers | join(", ") }}
                {% else %}
@@ -131,9 +134,6 @@
                <span class="trade-label red">RT</span>
                {% elif show.tradeLabel == 'NT' %}
                <span class="trade-label blue">NT</span>
-               {% endif %}
-               {% if show.master == true or (show.tapers and show.tapers.length == 1 and show.tapers[0] == "Vortex") %}
-               <span class="trade-label master">master</span>
                {% endif %}
             </td>
             <td>
