--- a/styles/show.css
+++ b/styles/show.css
@@ -109,6 +109,20 @@
   text-transform: uppercase;
 }
 
+.video-misc-label-page {
+  top: -5px;
+  left: 48px;
+  background-color: #4CAF50;
+  text-transform: uppercase;
+}
+
+.audio-misc-label-page {
+  top: -5px;
+  left: 50px;
+  background-color: #4CAF50;
+  text-transform: uppercase;
+}
+
 .note-block {
   position: absolute;
   top: -6px;
