--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<base href="{{ '/' | url }}">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/tradelist/styles/global.css">
 	<link rel="stylesheet" href="/tradelist/styles/show.css">
