navigation menu fix

--- a/src/shows/index.njk
+++ b/src/shows/index.njk
@@ -23,7 +23,7 @@
             <th>Type</th>
             <th>Source</th>
             <th>Taper(s)</th>
-            <th>Images</th>
+            <th>Pics</th>
             <th>Page</th>
 			<th>🛒</th>
          </tr>
@@ -159,7 +159,7 @@
                   title="View images"
                   style="cursor: pointer; font-size: 18px;"
                   onclick='openModal("{{ firstImg.externalId }}", {{ show.images | dump | safe }})'
-                >📸</span>
+                >📷</span>
               {% else %}
                 —
               {% endif %}
