--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -46,8 +46,9 @@ body {
   border-bottom: 1px solid #e0eaf3;
   display: flex;
   justify-content: space-between;
-  padding: 1rem 2rem;
+  padding: 0 1rem;
   font-size: 1rem;
+  overflow: hidden;
 }
 
 .navbar a {
@@ -417,8 +418,8 @@ img.clickable-thumb {
 }
 
 .cart-cell-label-wrap .show-label {
-  font-size: 8px;
-  padding: 1px 6px;
+  font-size: 7px;
+  padding: 1px 5px;
   font-weight: bold;
   border-radius: 6px;
   color: #000;
@@ -427,8 +428,8 @@ img.clickable-thumb {
 }
 
 .cart-cell-label-wrap .trade-label.red {
-  font-size: 8px;
-  padding: 1px 6px;
+  font-size: 7px;
+  padding: 1px 5px;
   font-weight: bold;
   border-radius: 6px;
   color: #000;
@@ -437,8 +438,8 @@ img.clickable-thumb {
 }
 
 .cart-cell-label-wrap .trade-label.blue {
-  font-size: 8px;
-  padding: 1px 6px;
+  font-size: 7px;
+  padding: 1px 5px;
   font-weight: bold;
   border-radius: 6px;
   color: #000;
@@ -447,11 +448,74 @@ img.clickable-thumb {
 }
 
 .cart-cell-label-wrap .trade-label.master {
-  font-size: 8px;
-  padding: 1px 6px;
+  font-size: 7px;
+  padding: 1px 5px;
   font-weight: bold;
   border-radius: 6px;
   color: #000;
   white-space: nowrap;
   background-color: #CE93D8;
+}
+
+#cart-table thead th {
+  background-color: #eaf4ff;
+  font-weight: 600;
+  color: #333;
+}
+
+.custom-navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.75rem 2rem;
+  background-color: #fff;
+  border-bottom: 1px solid #e0eaf3;
+}
+
+.navbar-left {
+  flex-shrink: 0;
+}
+
+.site-title {
+  font-size: 0.9rem;
+  font-weight: 600;
+  color: #000;
+}
+
+.navbar-right {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+#main-nav {
+  margin-top: 0px;
+  gap: 3px;
+}
+
+#main-nav .nav-link {
+  font-size: 16px;
+  font-weight: 600;
+  padding: 4px 15px;
+  color: #0366d6;
+  border-radius: 999px;
+  transition: background-color 0.2s ease;
+  /* Add a transparent border to the default state */
+  border: 1px solid transparent;
+}
+
+#main-nav .nav-link.active {
+  background-color: #d6e4f0;
+  color: #0366d6;
+  /* The border is already here, so no layout shift will occur */
+}
+
+body {
+    overflow-y: scroll;
+}
+
+#main-nav .nav-link:hover,
+#main-nav .nav-link:focus {
+  outline: none;
+  text-decoration: none; /* This will also remove the underline on hover if you don't want it */
 }
